--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,328 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: 'Libre Franklin', sans-serif;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --Oikawa: lightseagreen;
+  --Uniform: #f2f4f1;
+  --Eyes: black;
+  --cloudBlue: red;
+  --Jacket: darkgrey;
+  --shadowAnimateSpeed: 0.6s;
+}
+
+html {
+  background-color: var(--Uniform);
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--Oikawa);
+  box-shadow: 0 5px 5px rgb(0 0 0 / 30%);
+}
+
+h1 {
+  margin-left: 30px;
+  color: var(--Uniform);
+  font-family: 'Kanit', sans-serif;
+  font-size: 2.2rem;
+  font-weight: 400;
+}
+
+.nav-tabs {
+  display: flex;
+  align-items: center;
+}
+
+li {
+  list-style-type: none;
+}
+
+.nav-link {
+  text-decoration: none;
+  margin: 0 15px;
+  color: var(--Uniform);
+  padding: 15px;
+  border-radius: 5px;
+  transition: box-shadow var(--shadowAnimateSpeed);
+}
+
+.nav-link:hover {
+  box-shadow:
+    3px 3px 6px rgb(0 0 0 / 33%),
+    -3px -3px 6px rgb(255 255 255 / 25%);
+  transition: box-shadow var(--shadowAnimateSpeed);
+}
+
+.nav-link:active {
+  box-shadow:
+    inset 6px 6px 12px rgb(0 0 0 / 50%),
+    inset -6px -6px 12px rgb(255 255 255 / 5%);
+  transition: box-shadow var(--shadowAnimateSpeed);
+}
+
+.active {
+  box-shadow:
+    0 0 0 rgb(0 0 0 / 0%),
+    0 0 0 rgb(0 0 0 / 0%),
+    inset 6px 6px 12px rgb(0 0 0 / 50%),
+    inset -6px -6px 12px rgb(255 255 255 / 5%);
+  transition: box-shadow var(--shadowAnimateSpeed);
+}
+
+.active:hover {
+  box-shadow:
+    3px 3px 6px rgb(0 0 0 / 33%),
+    -3px -3px 6px rgb(255 255 255 / 25%),
+    inset 0 0 0 rgb(0 0 0 / 0%),
+    inset 0 0 0 rgb(0 0 0 / 0%);
+  transition: box-shadow var(--shadowAnimateSpeed);
+}
+
+.page-section {
+  margin: 50px auto;
+  padding: 0 50px;
+  max-width: 1000px;
+}
+
+h2 {
+  color: var(--Eyes);
+  font-family: 'Kanit', sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+  padding: 10px;
+  margin-bottom: 40px;
+}
+
+.lines {
+  border-left: 10px solid var(--Jacket);
+  border-bottom: 3px solid var(--Jacket);
+}
+
+.about-me-flex {
+  display: flex;
+  align-items: flex-start;
+}
+
+.profile-pic {
+  width: 200px;
+  border-radius: 100%;
+  box-shadow:
+    3px 3px 6px rgb(0 0 0 / 33%),
+    -3px -3px 6px rgb(255 255 255 / 100%);
+}
+
+p {
+  margin: 0;
+  margin-left: 30px;
+  line-height: 1.8;
+  text-align: justify;
+}
+
+h4 {
+  color: var(--Eyes);
+  font-family: 'Kanit', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  padding: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.all-projects-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1000px;
+}
+
+.project-card {
+  margin-bottom: 70px;
+  flex: 0 0 45%;
+}
+
+.project-image-btns {
+  flex: 0 1 100%;
+}
+
+img {
+  width: 100%;
+  box-shadow:
+    3px 3px 6px rgb(0 0 0 / 33%),
+    -3px -3px 6px rgb(255 255 255 / 100%);
+}
+
+.project-btn-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.btn-left,
+.btn-right {
+  flex: 1 1 50%;
+  text-align: center;
+  background-color: var(--Jacket);
+  padding: 10px 0;
+  color: var(--Uniform);
+  text-decoration: none;
+}
+
+.btn-left {
+  border-radius: 8px 0 0 8px;
+  border-right: solid 3px var(--Eyes);
+}
+
+.btn-right {
+  border-radius: 0 8px 8px 0;
+}
+
+.btn-left:hover,
+.btn-right:hover {
+  background-color: var(--Eyes);
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form input {
+  width: 400px;
+  margin-bottom: 20px;
+}
+
+.form textarea {
+  width: 400px;
+  height: 200px;
+}
+
+h5 {
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+button {
+  margin-top: 20px;
+  background-color: var(--Oikawa);
+  color: var(--Uniform);
+  padding: 10px 20px;
+  border: none;
+  box-shadow:
+    3px 3px 6px rgb(0 0 0 / 33%),
+    -3px -3px 6px rgb(255 255 255 / 100%);
+}
+
+button:disabled {
+  background-color: var(--cloudBlue);
+  box-shadow: none;
+}
+
+button:active {
+  box-shadow: none;
+  box-shadow:
+    0 0 0 rgb(0 0 0 / 0%),
+    0 0 0 rgb(0 0 0 / 0%),
+    inset 6px 6px 12px rgb(0 0 0 / 50%),
+    inset -6px -6px 12px rgb(255 255 255 / 5%);
+}
+
+.page-section a {
+  color: var(--Jacket);
+  text-decoration: none;
+}
+
+.project-btn-wrapper a {
+  color: var(--Uniform);
+}
+
+h3 {
+  text-align: center;
+}
+
+.flex-lists {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.flex-lists li {
+  margin-bottom: 10px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+}
+
+footer a {
+  color: var(--Oikawa);
+  margin: 30px 30px;
+  transition: color var(--shadowAnimateSpeed);
+}
+
+footer a:hover {
+  color: var(--cloudBlue);
+  transition: color var(--shadowAnimateSpeed);
+}
+
+/* Media Queries */
+@media screen and (max-width: 860px) {
+  header {
+    flex-wrap: wrap;
+  }
+
+  h1 {
+    margin: 0.67em auto;
+    width: 100%;
+    text-align: center;
+  }
+
+  .nav-tabs {
+    margin: 10px auto;
+    margin-bottom: 40px;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about-me-flex {
+    display: block;
+  }
+
+  .nav-link {
+    margin: 0 5px;
+    font-size: 0.7rem;
+    padding: 10px;
+  }
+
+  .page-section {
+    padding: 0 20px;
+  }
+
+  .profile-pic {
+    display: block;
+    margin: 0 auto;
+  }
+
+  p {
+    margin: 0;
+    margin-top: 30px;
+  }
+
+  .project-card {
+    flex: 0 0 100%;
+    margin-bottom: 20px;
+  }
+
+  .form textarea,
+  .form input {
+    width: 100%;
+  }
+
+  .flex-lists {
+    display: block;
+  }
 }
